# g4cusp

./: .gitattributes  .gitignore  404.html  CMakeLists.txt  LICENSE  README.md  batch.mac  batch.mac.bak  convertRoot2Fits.py  convertRoot2Fits.py.bak  cusp_gdml.cc  cusp_payload_GEANT4-worldVOL-structure.xml  cusp_payload_GEANT4-worldVOL-structure.xml.bak  cusp_payload_GEANT4-worldVOL-structure.xml.old  cusp_test_dummy_v1-worldVOL-solids.xml  cusp_test_dummy_v1-worldVOL.gdml  deep_investigation.txt  define.xml  hermes_test.gdml  how-to-build-the-app.txt  index.html  mass_model.txt  search.html  visGUI2.mac  visGUI2.mac.bak
code/: index.html
cpp-lab/source_for_a_rotating_satellite/: CMakeLists.txt  compile.sh  rotating_source_model.cpp  rotating_source_model_g4.cc
cpp/source_for_a_rotating_satellite/: rotating_source_model
doc/: mkdocs.yml
doc/docs/: code.md  howto.md  index.md  mass_model.md
doc/tmp/: about.md
howto/: index.html
include/: DetectorConstruction.hh  DetectorConstruction.hh.old  DetectorHit.hh  PrimaryGeneratorAction.hh  RsmSource.hh  SDDDetectorHit.hh  SDDSensitiveDetector.hh  UserRun.hh
lookup_table/: CUSP_Map_Absorber_Scatterer.xlsx  detector.csv  howto.ipynb  ~$CUSP_Map_Absorber_Scatterer.xlsx
mass_model/: index.html
mass_model_gdml/20230519_GDML_GEANT4_20230519/: define.xml  (+1 more)
notebooks/: cusp_payload_GEANT4-worldVOL-structure_updated.xml  detectors_lookup_table.csv  detectors_lookup_table.csv.bak  events_quick_look.ipynb  fix_detector_names.ipynb  lookup_table.csv  lookup_table_create.ipynb  matplotlib_example.ipynb  new_file.xml  scorefile.fits  scorefile.root  scorefile_20keV.root  scorefile_60keV.root  scorefile_test.fits  test_uniform_beam.ipynb  test_uniform_beam_input_fits.ipynb
old_gdml_2023-06-08_tmp/: define.xml  structure.xml
search/: search_index.json
send_box/: readme.txt
source_model/: index.html
src/: DetectorConstruction.cc  DetectorConstruction.cc.old  PhysicsList.cc  PrimaryGeneratorAction.cc  SDDDetectorHit.cc  SDDSensitiveDetector.cc  SensitiveDetector.cc  UserEventAction.cc  UserRun.cc  UserRunAction.cc
tests/: index.html
(+92 files in other folders)
